		  doesn't have to be passed in the command line.
		* Updated socket-2.5.c to the latest wx-cvs code. 
		  Fast reconnect -> lowid bug is fixed in wx-cvs now. When
		  wx-2.5.3 is out, we will finally be able to drop this file.
		  It will only be needed for versions 2.5.0(?) to 2.5.2.
		* Removed gsocket-2.5.h from the project. This file was not
		  beeing used anymore.

	rommel:
		* Patch to implement the commands serverconnect and reloadipf
		  in amulecmd.

	ThePolish:
		* i18n log lines
		* Some win32 fixes (slashes and backslashes)
		* Add traditionnal Chinese translation (zh_TW) from Paul (Thanks !)
		* Add it, nl, fr, pl, es translation updates (Thanks to all translators)
		* Fix copyright for alc icons
		* Replace .ico simple icons by icons group .ico
		

Version 2.0.0rc5 - The 'Let's recover our release speed' version.
----------
2004-07-18

	deltaHF:
	        * Better sorting of some columns

	Kry:
		* Some gui design and coding of the upcoming Kad window
		* Protocol update:
			* UDP protocol upgraded to eMule 0.43b
			* TCP Standard Base protocol upgraded to eMule 0.43b
			* TCP Extended Base protocol upgraded to eMule 0.43b
		* Fixed memory corruption and crashes on 'cas'
		* Fixed gsocket-2.5.c for big endian archs.
		* Fixed CFile class to actually return error when a error ocurred and not only when it feels like.
		* Fixed bug where the 'All' category could be removed leading to crashes and other funny behaviours.
		* No more minimize when no tray has been selected.
		* Fixed browse skin file button to actually browse a file ;)
		* Fixed high 32 bits of transfered bytes not being loaded on known.met (sorry fluffly!)
		* Some Mac bugfixes.

	Hetfield:
		* Some gcc 3.4.x compilation fixes

	lfroen:
		* GUIEvents updated 
		* core2gui events added.
		* Some gcc 3.4 fixes to GUIEvents

	phoenix:
		* Added a test with a warning to
		  CSearchDlg::OnBnClickedSdownload in SearchDlg.cpp. A NULL
		  value has been reported on the foruns, we don't know how