@@ -45,6 +45,10 @@ Version 2.0.0rc6 - The '???' version.
 		  It will only be needed for versions 2.5.0(?) to 2.5.2.
 		* Removed gsocket-2.5.h from the project. This file was not
 		  beeing used anymore.
+		* Added command line parameter "-q" or "--quiet" to
+		  amuleweb(Dlg) and amulecmd(Dlg). This is to run amuleweb
+		  without any output to stdout, so that it does not need a
+		  terminal.
 
 	rommel:
 		* Patch to implement the commands serverconnect and reloadipf
